--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -7,9 +7,9 @@
 
 // Duration.
 	$duration: (
-		transitions:		0.2s,
-		menu:				0.5s,
-		fadein:				3s
+		transitions:		0s,
+		menu:				0s,
+		fadein:				0s
 	);
 
 // Size.
@@ -31,7 +31,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
+		bg:					#2F2933,
 		fg:					#fff,
 		fg-bold:			#fff,
 		fg-light:			rgba(255,255,255,0.5),
@@ -41,7 +41,7 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
+			bg:				#01A2A6,
 			fg-bold:		#ffffff,
 			fg:				mix(#21b2a6, #ffffff, 25%),
 			fg-light:		mix(#21b2a6, #ffffff, 40%),
@@ -52,7 +52,7 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#29D9C2,
 			fg-bold:		#ffffff,
 			fg:				mix(#00ffcc, #ffffff, 25%),
 			fg-light:		mix(#00ffcc, #ffffff, 40%),
@@ -63,7 +63,7 @@
 		),
 
 		accent3: (
-			bg:				#00f0ff,
+			bg:				#BDF271,
 			fg-bold:		#ffffff,
 			fg:				mix(#00f0ff, #ffffff, 25%),
 			fg-light:		mix(#00f0ff, #ffffff, 40%),
@@ -74,7 +74,7 @@
 		),
 
 		accent4: (
-			bg:				#76ddff,
+			bg:				#FFFFA6,
 			fg-bold:		#ffffff,
 			fg:				mix(#76ddff, #ffffff, 25%),
 			fg-light:		mix(#76ddff, #ffffff, 40%),
