--- a/css/main.scss
+++ b/css/main.scss
@@ -504,6 +504,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		border: 0;
 		display: inline-block;
 		position: relative;
+		
 
 		img {
 			border-radius: 3px;
@@ -1484,8 +1485,8 @@ $baseurl: '{{ site.baseurl }}/images';
 		text-align: center;
 
 		h2 {
-			@include vendor('transform', 'scale(1)');
-			@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease'));
+			/* @include vendor('transform', 'scale(1)');
+			@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease')); */
 			display: inline-block;
 			font-size: 1.75em;
 			opacity: 1;
@@ -1493,7 +1494,7 @@ $baseurl: '{{ site.baseurl }}/images';
 			position: relative;
 			z-index: 1;
 
-			&:before, &:after {
+			/* &:before, &:after {
 				@include vendor('transition', 'width 0.85s ease');
 				@include vendor('transition-delay', '0.25s');
 				background: _palette(fg-bold);
@@ -1512,7 +1513,7 @@ $baseurl: '{{ site.baseurl }}/images';
 			&:after {
 				bottom: 0;
 				right: 0;
-			}
+			} */
 		}
 
 		p {
@@ -1668,7 +1669,7 @@ $baseurl: '{{ site.baseurl }}/images';
 
 	#main {
 		> header {
-			@include padding(12em, 0);
+			@include padding(5em, 0);
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/banner.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
@@ -1693,19 +1694,19 @@ $baseurl: '{{ site.baseurl }}/images';
 			}
 
 			@include breakpoint(xlarge) {
-				@include padding(10em, 0);
+				@include padding(3em, 0);
 			}
 
 			@include breakpoint(large) {
-				@include padding(8em, 3em);
+				@include padding(3em, 3em);
 			}
 
 			@include breakpoint(medium) {
-				@include padding(10em, 3em);
+				@include padding(4em, 3em);
 			}
 
 			@include breakpoint(small) {
-				@include padding(5em, 3em);
+				@include padding(3em, 3em);
 
 				h2 {
 					font-size: 1.25em;
