--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,12 +5,11 @@ layout: default
 
   <header>
     <h2>{{ page.title }}</h2>
-    <p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
   </header>
 
   <section class="wrapper style5">
     <div class="inner">
-      {{ content }}
+      {{ content | markdownify}}
     </div>
   </section>
 
