--- a/css/main.scss
+++ b/css/main.scss
@@ -509,6 +509,8 @@ $baseurl: '{{ site.baseurl }}/images';
 		img {
 			border-radius: 3px;
 			display: block;
+			max-width: 100%;
+			height: auto;
 		}
 
 		&.left {
