--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,5 +22,6 @@
     {{ thisyear }}
     {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
     <li>FOOTER: <a href="#" target="_blank">LINKS</a></li>
+    <li>Built with: <a href="http://jekyllrb.com" target="_blank">Jekyll</a></li>
   </ul>
 </footer>
