--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <!-- Header -->
 <header id="header"{% if page.layout == 'landing' %} class="alt"{% endif %}>
   <h1><a href="{{ site.baseurl }}/index.html">{{ site.title }}</a></h1>
+  <a href="{{ site.baseurl }}/02-Dukung.html" class="button mast">Donasi</a>
   <nav id="nav">
     <ul>
       <li class="special">
