--- a/css/main.scss
+++ b/css/main.scss
@@ -504,7 +504,6 @@ $baseurl: '{{ site.baseurl }}/images';
 		border: 0;
 		display: inline-block;
 		position: relative;
-		
 
 		img {
 			border-radius: 3px;
@@ -858,6 +857,26 @@ $baseurl: '{{ site.baseurl }}/images';
 			background-color: _palette(accent6, bg);
 			box-shadow: none !important;
 			color: _palette(accent6, fg-bold) !important;
+
+			&:hover {
+				background-color: lighten(_palette(accent6, bg), 5) !important;
+			}
+
+			&:active {
+				background-color: darken(_palette(accent6, bg), 5) !important;
+			}
+		}
+		
+		&.mast {
+			@include vendor('transition', 'opacity #{_duration(transitions)} ease');
+			background-color: _palette(accent1, bg);
+			box-shadow: none !important;
+			color: _palette(accent6, fg-bold) !important;
+			height: inherit;
+			right: 10.25em;
+			line-height: inherit;
+			position: absolute;
+			top: 0;
 
 			&:hover {
 				background-color: lighten(_palette(accent6, bg), 5) !important;
@@ -1371,7 +1390,6 @@ $baseurl: '{{ site.baseurl }}/images';
 /* Header */
 
 	#header {
-		@include vendor('transition', 'background-color #{_duration(transitions)} ease');
 		background: _palette(bg);
 		height: 3em;
 		left: 0;
@@ -1385,6 +1403,27 @@ $baseurl: '{{ site.baseurl }}/images';
 			@include vendor('transition', 'opacity #{_duration(transitions)} ease');
 			height: inherit;
 			left: 1.25em;
+			line-height: inherit;
+			position: absolute;
+			top: 0;
+
+			a {
+				border: 0;
+				display: block;
+				height: inherit;
+				line-height: inherit;
+
+				@include breakpoint(small) {
+					font-size: 0.8em;
+				}
+			}
+		}
+
+		h2 {
+			@include vendor('transition', 'opacity #{_duration(transitions)} ease');
+			height: 2em;
+			line-height: 2em;
+			right: 5.25em;
 			line-height: inherit;
 			position: absolute;
 			top: 0;
